syntax = "proto3";

option java_package = "org.apache.skywalking.banyandb";
option go_package = "github.com/apache/skywalking-banyandb/benchmark/go-bench;go_bench";

package banyandb.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/struct.proto";

option (gogoproto.unmarshaler_all) = true;

message Str {
    string value = 1;
}

message Int {
    int64 value = 1;
}

message StrArray {
    repeated string value = 1;
}

message IntArray {
    repeated int64 value = 1;
}

message Field {
    oneof value_type {
        google.protobuf.NullValue null = 1;
        Str str = 2;
        StrArray str_array = 3;
        Int int = 4;
        IntArray int_array = 5;
    }
}

message EntityValue {
    // entity_id could be span_id of a Span or segment_id of a Segment in the context of Trace
    string entity_id = 1;
    // timestamp_nanoseconds is in the timeunit of nanoseconds. It represents
    // 1) either the start time of a Span/Segment,
    // 2) or the timestamp of a log
    uint64 timestamp_nanoseconds = 2;
    // binary representation of segments, including tags, spans...
    bytes data_binary = 3;
    // support all of indexed fields in the fields.
    // Pair only has value, as the value of PairValue match with the key
    // by the index rules and index rule bindings of Metadata group.
    // indexed fields of multiple entities are compression in the fields.
    repeated Field fields = 4;
}

message Metadata {
    string group = 1;
    string name = 2;
}

message WriteEntity {
    // the mate_data is only required in the first write.
    Metadata meta_data = 1;
    // the entity is required.
    EntityValue entity = 2;
}
